--- a/styles.css
+++ b/styles.css
@@ -109,10 +109,14 @@ body {
   transition: all 0.3s;
 }
 
+.author {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 .author-name {
   transition: all 0.3s;
   color: var(--fc-white);
-  font-weight: 400;
 }
 
 .card-title:hover,
